--- a/index.ipynb
+++ b/index.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "def attendance(advertising):\n",
-    "    return 1.5*x"
+    "    advertising = r1.5*x"
    ]
   },
   {
