--- a/index.ipynb
+++ b/index.ipynb
@@ -34,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def attendance(advertising):\n",
-    "    advertising = 1.5*x"
+    "    return 1.5*advertising"
    ]
   },
   {
