--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "def attendance_with_friends(advertising):\n",
-    "    return advertising"
+    "    return (1.5*advertising)+20"
    ]
   },
   {
