--- a/index.ipynb
+++ b/index.ipynb
@@ -1123,7 +1123,8 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    mx+b"
+    "    mx+b\n",
+    "    return {x_}"
    ]
   },
   {
