Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1124,7 +1124,7 @@
    "source": [
     "def m_b_data(m, b, x_values):\n",
     "    mx+b\n",
-    "    return {'x':x_values, }"
+    "    return {'x':x_values, 'y':y_values}"
    ]
   },
   {
