Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1123,7 +1123,8 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    plug in x values into mx+b\n",
+    "    plug in x values into mx+b to get y values and put them in list\n",
+    "    list(m)\n",
     "    return {'x':x_values, 'y':y_values}"
    ]
   },
