Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1124,7 +1124,7 @@
    "source": [
     "def m_b_data(m, b, x_values):\n",
     "    plug in x values into mx+b to get y values and put them in list\n",
-    "    list(map())\n",
+    "    list(map(lambda y: y['y']))\n",
     "    return {'x':x_values, 'y':y_values}"
    ]
   },
