--- a/index.ipynb
+++ b/index.ipynb
@@ -1161,7 +1161,7 @@
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
-    "    return {'x':x_values, 'y':y_values}"
+    "    return {'x':x_values, 'y':y_values, nam}"
    ]
   },
   {
