--- a/index.ipynb
+++ b/index.ipynb
@@ -1156,12 +1156,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
-    "    return {'x':x_values, 'y':y_values, 'name':name, mode:'mod'}"
+    "    return {'x':x_values, 'y':y_values, 'name':name, mode:'mode'}"
    ]
   },
   {
