--- a/index.ipynb
+++ b/index.ipynb
@@ -1161,7 +1161,8 @@
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
-    "    values = "
+    "    values = m_b_data\n",
+    "    return values."
    ]
   },
   {
