Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1247,7 +1247,7 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    (second show['budget']-first_show['budget'])/(second show['budget']-first_show['budget'])"
+    "    (second show['attendance']-first_show['attende'])/(second show['budget']-first_show['budget'])"
    ]
   },
   {
