Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1242,21 +1242,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-29-911378cacd11>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-30-bc2c42730967>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-911378cacd11>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return ((second show['attendance']-first_show['attendance'])/(second show['budget']-first_show['budget'])\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-bc2c42730967>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return ((second show['attendance']-first_show['attendance'])/(second show['budget']-first_show['budget']))\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    return ((second show['attendance']-first_show['attendance'])/(second show['budget']-first_show['budget']_"
+    "    return ((second show['attendance']-first_show['attendance'])/(second show['budget']-first_show['budget']))"
    ]
   },
   {
