Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1256,7 +1256,7 @@
    ],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    return ((second show['attendance']-first_show['attendance'])/(second show['budget']-first_show['budget']))"
+    "    returnecond show['attendance']-first_show['attendance'])/(second show['budget']-first_show['budget']))"
    ]
   },
   {
