--- a/index.ipynb
+++ b/index.ipynb
@@ -1242,28 +1242,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-30-bc2c42730967>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-bc2c42730967>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return ((second show['attendance']-first_show['attendance'])/(second show['budget']-first_show['budget']))\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    returnecond show['attendance']-first_show['attendance'])/(second show['budget']-first_show['budget']))"
+    "    return (second_show['attendance'] - first_show['attendance'])/(second_show['budget'] - first_show['budget'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'first_show' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-e9f1588c7ba0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmarginal_return_on_budget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_show\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond_show\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 1.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'first_show' is not defined"
+     ]
+    }
+   ],
    "source": [
     "marginal_return_on_budget(first_show, second_show) # 1.5"
    ]
