--- a/index.ipynb
+++ b/index.ipynb
@@ -1569,13 +1569,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
     "    y = m*x_value+b\n",
-    "    "
+    "    return y"
    ]
   },
   {
